# RT-Fixer

./: .gitmodules  README.md
orb_slam_2_ros/: README.md  run.sh
orb_slam_2_ros/docker/melodic/: Dockerfile
orb_slam_2_ros/orb_slam2/include/: System.h  Tracking.h
orb_slam_2_ros/orb_slam2/src/: Frame.cc  FrameDrawer.cc  KeyFrameDatabase.cc  ORBmatcher.cc  System.cc  Tracking.cc
orb_slam_2_ros/ros/include/: MonoNode.h  Node.h
orb_slam_2_ros/ros/launch/: orb_slam2_d435_mono.launch  orb_slam2_d435_rgbd.launch  orb_slam2_l515_mono.launch  orb_slam2_l515_rgbd.launch  orb_slam2_l515_rgbd_localization.launch  real_camera.launch
orb_slam_2_ros/ros/src/: MonoNode.cc  Node.cc  RGBDNode.cc
ros/src/: ReadMe  ReadMe.md
ros/src/map_manager/: CMakeLists.txt  package.xml
ros/src/map_manager/include/: map_loader.h
ros/src/map_manager/launch/: map_loader.launch
ros/src/map_manager/scripts/: create_pcd.py
ros/src/map_manager/src/: map_loader.cpp
ros/src/mapping_ws/kiss-icp/cpp/kiss_icp/pipeline/: KissICP.cpp  KissICP.hpp
ros/src/mapping_ws/kiss-icp/ros/: CMakeLists.txt  package.xml
ros/src/mapping_ws/kiss-icp/ros/launch/: frames.gv  n_odometry.launch  pandar40.launch  rs-lidar-m1-indoor.launch  rs-lidar-m1-outdoor.launch  temp.launch  velodyne.launch
ros/src/mapping_ws/kiss-icp/ros/ros1/: OdometryServer.cpp  OdometryServer.hpp
ros/src/mapping_ws/kiss-icp/ros/rviz/: kiss_icp_ros1.rviz  temp.rviz
ros/src/mapping_ws/kiss-icp/ros/srv/: ClearPointCloud.srv  SavePointCloud.srv
ros/src/mapping_ws/scripts/: merge_pcd.py
ros/src/oem_client/: CMakeLists.txt  package.xml
ros/src/oem_client/configs/: VoxelFilter.cfg  hdl-32e.path  nagoya.path  temp.path  temp2.path  visualization.rviz
ros/src/oem_client/include/: temp.h
ros/src/oem_client/launch/: client.launch  client_backup.launch  clients.launch  ndt_localizer.launch  points_downsample_test.launch  static_tf.launch  test.launch
ros/src/oem_client/scripts/: LocalMapper.py  LocalMapperOnline-large-remove.py  LocalMapperOnline.py  distance_saver.py  format.py  movement_tracker.py  smart_rosbag.py  temp.py
ros/src/oem_client/src/: ndt.cpp  temp.cpp  update_detector.cpp  voxel_grid_filter.cpp
ros/src/oem_localizer/: CMakeLists.txt  package.xml
ros/src/oem_localizer/configs/: ndt_initial_pose.csv
ros/src/oem_localizer/include/: ndt.h  ndt_global_localizer.h  ndt_localizer.h
ros/src/oem_localizer/launch/: ndt_localizer.launch  points_downsample.launch  temp.launch
ros/src/oem_localizer/msg/: LidarPose.msg
ros/src/oem_localizer/src/: ndt.cpp  ndt_global_localizer.cpp  ndt_localizer_backup.cpp  voxel_grid_filter.cpp  voxel_grid_filter_backup.cpp
ros/src/oem_localizer/srv/: LidarGlobalLocalization.srv
ros/src/oem_server/: CMakeLists.txt  package.xml
ros/src/oem_server/cfg/: FilterConfig.cfg
ros/src/oem_server/configs/: clients.rviz  jaguar2.rviz
ros/src/oem_server/include/: mapLoader.h
ros/src/oem_server/launch/: map_loader.launch  start_map_merge.launch
ros/src/oem_server/src/: mapLoader.cpp  pcd_with_pose.cpp  test_map_uploader.cpp
ros/src/oem_server/srv/: UploadPointCloud.srv
ros/src/oem_simulator/: CMakeLists.txt  package.xml
ros/src/oem_simulator/launch/Fintech/: robosense_m1.launch
ros/src/oem_simulator/launch/LIBRE/: robosense32.launch  test.launch  test2.launch  velodyne16.launch  velodyne16_temp_map.launch
ros/src/oem_simulator/launch/LIBRE/hdl_32E/: hdl_32E.launch  hdl_32E_faked_exp1.launch  hdl_32E_temp_map.launch
ros/src/oem_simulator/launch/LIBRE/hdl_64s2/: hdl_64s2.launch  hdl_64s2_ndt_map.launch  hdl_64s2_origin.launch  hdl_64s2_temp_map.launch
ros/src/oem_simulator/launch/LIBRE/robosense32/: robosense_32.launch
ros/src/oem_simulator/launch/LIBRE/vlp-16/: vlp16.launch  vlp16_origin.launch  vlp16_temp_map.launch
ros/src/oem_simulator/scripts/: call_clear_map.py  pose_record.py  pose_record_back.py  rosbag_play.py
