<?xml version="1.0"?>
<package>
  <name>map_manager</name>
  <version>0.0.0</version>
  <description>The map manager package</description>
  <maintainer email="gz4941@wayne.edu">Ren Zhong</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>pcl_conversions</run_depend>

</package>
