<?xml version="1.0"?>
<package>
    <name>oem_server</name>
    <version>0.0.0</version>
    <description>The oem_server package</description>
    <maintainer email="gz4941@wayne.edu">Ren Zhong</maintainer>

    <license>BSD</license>
    <!-- This is required as per the error -->
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>tf2_sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>diagnostic_msgs</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>message_generation</run_depend>

    <run_depend>tf2</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>tf2_geometry_msgs</run_depend>
    <run_depend>tf2_sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>diagnostic_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>

</package>
